...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/baseline_shopping_bag_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName"
                android:textColor="@color/purple" />
        </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintEnd_toEndOf="@+id/inputMake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputItemName"
                app:startIconDrawable="@drawable/value">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Value"
                    android:inputType="numberDecimal"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/make">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/makeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Make"
                    android:inputType="text"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_width="0dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/model">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modelInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Model"
                    android:inputType="text"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_weight="6"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/qrcode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serialNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="SerialNumber"
                    android:inputType="text"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:startIconDrawable="@drawable/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:textColor="@color/purple" />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDescription"
            app:startIconDrawable="@drawable/comments">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comments"
                android:inputType="textMultiLine"
                android:textColor="@color/purple" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comments">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Cancel" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:clickable="true"
...
