...
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/itemsListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:paddingTop="10dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/baseline_person_24" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:src="@android:drawable/ic_input_add" />

...
